test/should_fail/TestReservedWord2.oj

@implementation TestReservedWord

- (void) test
{
	var $oj_foo = "foo";
}

@end
